Update branding in index.html to reflect new company name and adjust button styles for consistency

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <nav class="nav-grid max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-4">
         <!-- Logo -->
         <div class="logo-area flex items-center">
-          <span class="text-2xl font-bold text-primary-600 hover:text-primary-700 transition-colors duration-300">MyBrand</span>
+          <span class="text-2xl font-bold text-primary-600 hover:text-primary-700 transition-colors duration-300">Ayegba Techworks</span>
         </div>
         
         <!-- Navigation Links (Hidden on mobile, shown on larger screens by CSS Grid) -->
@@ -45,7 +45,7 @@
             <span class="material-symbols-outlined">menu</span>
           </button>
           <!-- Desktop Get Started Button (Hidden on mobile, visible on larger screens by CSS Grid) -->
-          <button class="desktop-get-started-button bg-primary-600 text-white px-6 py-2 rounded-lg hover:bg-primary-700 transform hover:scale-105 transition-all duration-300 shadow-md hover:shadow-lg">
+          <button class="border-2 border-slate-300 text-slate-700 px-8 py-4 rounded-lg font-semibold hover:border-primary-600 hover:text-primary-600 transform hover:scale-105 transition-all duration-300">
             Get Started
           </button>
         </div>
@@ -59,13 +59,13 @@
         <div class="hero-content-grid items-center">
           <div class="space-y-6">
             <h1 class="text-4xl md:text-5xl lg:text-6xl font-bold text-slate-900 leading-tight">
-              Welcome to <span class="text-primary-600">MyBrand</span>
+              Welcome to <span class="text-primary-600">Ayegba Techworks</span>
             </h1>
             <p class="text-xl text-slate-600 leading-relaxed">
               Your premier solution for modern web development with cutting-edge technologies and exceptional performance.
             </p>
             <div class="flex flex-col sm:flex-row gap-4">
-              <button class="bg-primary-600 text-white px-8 py-4 rounded-lg font-semibold hover:bg-primary-700 transform hover:scale-105 transition-all duration-300 shadow-lg hover:shadow-xl">
+              <button class="border-2 border-slate-300 text-slate-700 px-8 py-4 rounded-lg font-semibold hover:border-primary-600 hover:text-primary-600 transform hover:scale-105 transition-all duration-300">
                 Get Started Free
               </button>
               <button class="border-2 border-slate-300 text-slate-700 px-8 py-4 rounded-lg font-semibold hover:border-primary-600 hover:text-primary-600 transform hover:scale-105 transition-all duration-300">
