--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <footer class="footer-grid bg-slate-900 border-t border-slate-800">
       <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-12">
         <div class="text-center text-slate-400">
-          &copy; 2025 MyBrand. All rights reserved.
+          &copy; 2025 Ayegba Techworks. All rights reserved.
         </div>
       </div>
     </footer>
