--- a/index.html
+++ b/index.html
@@ -21,16 +21,17 @@
   <div class="main-layout-container bg-gradient-to-br from-slate-50 to-slate-100 min-h-screen">
 
     <!-- Header Section -->
-    <header class="header-grid w-full bg-white shadow-sm border-b border-slate-200">
+    <header class="header-grid w-full bg-white shadow-sm border-b border-slate-200 relative">
+      <input type="checkbox" id="mobile-menu-toggle" class="mobile-menu-toggle-checkbox">
       <nav class="nav-grid max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-4">
         <!-- Logo -->
         <div class="logo-area flex items-center">
-          <span class="text-2xl font-bold text-primary-600 hover:text-primary-700 transition-colors duration-300">Ayegba Techworks</span>
+          <a href="#" class="text-2xl font-bold text-primary-600 hover:text-primary-700 transition-colors duration-300">Ayegba Techworks</a>
         </div>
         
         <!-- Navigation Links (Hidden on mobile, shown on larger screens by CSS Grid) -->
         <div class="nav-links-area hidden-on-mobile">
-          <ul class="flex space-x-8 justify-center">
+          <ul class="flex flex-col lg:flex-row space-y-4 lg:space-y-0 lg:space-x-8 justify-center">
             <li><a href="#" class="text-slate-700 hover:text-primary-600 font-medium transition-colors duration-300 hover:scale-105 transform">Home</a></li>
             <li><a href="#" class="text-slate-700 hover:text-primary-600 font-medium transition-colors duration-300 hover:scale-105 transform">Features</a></li>
             <li><a href="#" class="text-slate-700 hover:text-primary-600 font-medium transition-colors duration-300 hover:scale-105 transform">Testimonials</a></li>
@@ -41,11 +42,11 @@
         <!-- Action Buttons / Mobile Menu Toggle -->
         <div class="action-buttons-area flex justify-end">
           <!-- Mobile Menu Button (Visible on mobile, hidden on larger screens by CSS Grid) -->
-          <button class="mobile-menu-button p-2 rounded-md hover:bg-slate-100 transition-colors duration-300">
+          <label for="mobile-menu-toggle" class="mobile-menu-button p-2 rounded-md hover:bg-slate-100 transition-colors duration-300 cursor-pointer">
             <span class="material-symbols-outlined">menu</span>
-          </button>
+          </label>
           <!-- Desktop Get Started Button (Hidden on mobile, visible on larger screens by CSS Grid) -->
-          <button class="border-2 border-slate-300 text-slate-700 px-8 py-4 rounded-lg font-semibold hover:border-primary-600 hover:text-primary-600 transform hover:scale-105 transition-all duration-300">
+          <button class="desktop-get-started-button border-2 border-slate-300 text-slate-700 px-8 py-4 rounded-lg font-semibold hover:border-primary-600 hover:text-primary-600 transform hover:scale-105 transition-all duration-300">
             Get Started
           </button>
         </div>
